<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addRecipeActivity"
    android:background="@drawable/transparent_background_screen"
    android:scrollbars="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/recipe_card_content_background"
        android:clickable="true"
        app:backgroundTint="@color/white_90_trans"
        app:fabCustomSize="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="30dp"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/backButton"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_bold"
        android:text="View and Edit a Recipie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="28sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipe_name"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_slide"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/recipe_card_background"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".77"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recipe_description"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".69"
                    android:background="@drawable/recipe_card_content_background"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/description"
                    android:textColor="#FF000000"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".02" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".29"
                    app:cardBackgroundColor="#88FFFFFF"
                    app:cardCornerRadius="@dimen/recipe_card_content_round_radius"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/recipe_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/default_recipe_image_desc"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/def_recipe_image" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mid_slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_below="@+id/top_slide"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/recipe_card_background"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".77"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/ingredient_image"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ingredients_icon" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/ingredient_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/ingredient_label"
                            android:textSize="13sp" />

                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight=".77">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/ingredient_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/recipe_card_content_background"

                        />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_below="@+id/mid_slide"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/recipe_card_background"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".77"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/direction_image"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/instructions_icon" />

                        <Space
                            android:layout_width="10dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/directions_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/direction_label"
                            android:textSize="13sp" />

                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight=".77">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/directions_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/recipe_card_content_background"

                        />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
</ScrollView>
</RelativeLayout>